# tauri-sample-app

./: .gitignore  app.config.ts  auto-imports.d.ts  eslint.config.mjs  nitro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts
.github/workflows/: build.yaml
scripts/: eslint-rules.mjs
src/: app.tsx  bindings.ts  entry-client.tsx  entry-server.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: index.tsx
